# bazel-coverage-playground

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  calculator.py  calculator_test.py  calculator_test2.py  python_version_test.py
my_calculator/: my_calculator.py  my_calculator_test.py
