###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_python", version = "0.36.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    # "@python3_11_toolchains//:all",
    python_version = "3.11",
    configure_coverage_tool = True,
    is_default = True,
)
